add nunjucks for render html pages

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <base href="{{baseUrl}}">
   <title>Heringsfish</title>
+  <script>
+    window.port = parseInt('{{port}}', 10);
+  </script>
 </head>
 <body>
   <h1>Heringsfish</h1>
